[package]
name = "caiman"
version = "0.0.1"
edition = "2024"
description = "a lightweight asset manager for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jaydenweaver/caiman"
readme = "README.md"
keywords = ["assets", "asset-manager", "data", "resource-loader", "game-dev"]
categories = ["filesystem", "caching", "game-development", "graphics"]

[dependencies]
image = "0.25.6"
symphonia = "0.5.4"
